--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ag-charts-react": "^10.3.3",
     "bootstrap": "^5.3.3",
+    "igniteui-react-charts": "^18.7.4",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
