--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "ag-charts-react": "^10.3.3",
+    "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "igniteui-react-charts": "^18.7.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.1",
+    "react-toastify": "^10.0.6",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
