--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/styled-engine-sc": "^6.1.10",
+    "@mui/system": "^6.1.10",
+    "@mui/x-charts": "^7.23.1",
     "@reduxjs/toolkit": "^2.4.0",
     "ag-charts-react": "^10.3.3",
     "axios": "^1.7.8",
@@ -18,12 +23,14 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
     "react-switch": "^7.0.0",
     "react-toastify": "^10.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
