--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
+    "react-rte": "^0.16.5",
     "react-switch": "^7.0.0",
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
