--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "igniteui-react-charts": "^18.7.4",
+    "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
     "react-rte": "^0.16.5",
